<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:fillViewport="true"
    android:background="@color/lilac"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/header_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/twenty_marginStart"
        android:layout_marginBottom="@dimen/twenty_marginBottom"
        android:text="@string/chong_id_label"
        />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/twenty_padding"
        android:text="@string/welcome_msg"
        android:textColor="@color/magenta"/>

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/twenty_marginStart"
        android:layout_marginBottom="@dimen/twenty_marginBottom"
        android:padding="@dimen/twenty_padding"
        android:hint="@string/enter_name"
        android:textColor="@color/magenta"
        android:inputType="text"/>

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/twenty_marginStart"
        android:layout_marginBottom="@dimen/twenty_marginBottom"
        android:hint="@string/enter_email"
        android:inputType="text" />


    <EditText
        android:id="@+id/ageInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/twenty_padding"
        android:layout_marginStart="@dimen/twenty_marginStart"
        android:layout_marginBottom="@dimen/twenty_marginBottom"
        android:hint="@string/enter_age"
        android:textColor="@color/magenta"
        android:inputType="text"/>

    <EditText
        android:id="@+id/descriptionInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/twenty_padding"
        android:layout_marginStart="@dimen/twenty_marginStart"
        android:layout_marginBottom="@dimen/twenty_marginBottom"
        android:hint="@string/user_description"
        android:textColor="@color/magenta"
        android:inputType="text"/>

    <EditText
        android:id="@+id/occupationInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/twenty_padding"
        android:layout_marginStart="@dimen/twenty_marginStart"
        android:layout_marginBottom="@dimen/twenty_marginBottom"
        android:hint="@string/enter_occupation"
        android:textColor="@color/magenta"
        android:inputType="text"/>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/twenty_marginStart"
        android:layout_marginBottom="@dimen/twenty_marginBottom"
        android:padding="@dimen/twenty_padding"
        android:text="@string/timeTomeet"
        android:background="@color/magenta"
        android:onClick="getSecondActivity" />
    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </FrameLayout>

</LinearLayout>